Solve layout issues of the landing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap');
+/* GDPR problems in Europe
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap'); */
 
 ul {
   list-style-type: none;
@@ -8,17 +9,14 @@ ul {
 
 a {
   text-decoration: none;
-  color: #e5e7eb;
-  font-size: 18px;
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 header {
@@ -41,10 +39,15 @@ header {
   gap: 1.5rem;
 }
 
+.menu-links a {
+  color: #e5e7eb;
+  font-size: 18px;
+}
+
 footer {
   padding: 1.5rem;
   text-align: center;
-  color: #bbb;
+  color: #e5e7eb;
   background-color: #1F2937;
 }
 
@@ -52,14 +55,15 @@ footer {
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .hero {
+  flex: 2;
   padding: 5rem 10vw;
   background-color: #1F2937;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 3rem;
 }
 
@@ -80,12 +84,13 @@ footer {
   padding: 0.5rem 2rem;
   font-size: 18px;
   background-color: #3882f6;
-  color: white;
+  color: #f9faf8;
   border: 0;
   border-radius: 5px;
 }
 
 .info {
+  flex: 2;
   padding: 0.5rem 10vw 5rem;
   text-align: center;
   display: flex;
@@ -102,6 +107,7 @@ footer {
 
 .info-images {
   display: flex;
+  justify-content: space-between;
   gap: 2rem;
 }
 
@@ -110,6 +116,7 @@ footer {
 }
 
 .quote {
+  flex: 0;
   padding: 5rem 10vw;
   background-color: #e5e7eb;
 }
@@ -128,8 +135,8 @@ footer {
 }
 
 .cta {
+  flex: 0;
   padding: 5rem 10vw;
-  width: 80vw;
 }
 
 .cta-frame {
@@ -138,11 +145,12 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 2rem;
   background-color: #3882f6;
 }
 
 .cta-frame h3 {
-  color: white;
+  color: #f9faf8;
   margin: 0;
 }
 
@@ -155,7 +163,7 @@ footer {
   padding: 0.5rem 2rem;
   font-size: 18px;
   background-color: #3882f6;
-  color: white;
-  border: 1px solid white;
+  color: #f9faf8;
+  border: 1px solid #f9faf8;
   border-radius: 5px;
 }
